[package]
name = "monkey"
version = "0.1.0"
authors = ["tsuyoshiwada <wadackel@gmail.com>"]

[dependencies]
rustyline = { version = "1.0.0", optional = true }
cjk = { version = "0.2.4" }

[[bin]]
name = "monkey"
path = "src/bin/main.rs"
required-features = ["binaries"]

[[bin]]
name = "wasm"
path = "src/wasm/main.rs"

[features]
binaries = ["rustyline"]
