[package]
name = "pua-lang"
version = "0.1.0"
authors = ["flaneur <me.ssword@gmail.com>"]

[dependencies]
rustyline = { version = "1.0.0", optional = true }
unicode-xid = { version = "0.2.1" }
unicode-normalization = "0.1.8"

[[bin]]
name = "pua-lang"
path = "src/bin/main.rs"
required-features = ["binaries"]

[[bin]]
name = "wasm"
path = "src/wasm/main.rs"
required-features = ["wasm"]

[features]
binaries = ["rustyline"]
wasm = []
